--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,10 @@
 $color:white;
 $color-background:linear-gradient(to bottom, #00c6ff, #0072ff);
+@mixin mq($size) {
+    @media(max-width:$size){
+        display: none;
+    }
+}
 *{
     box-sizing: content-box
 }
@@ -17,42 +22,56 @@ html{
 }
 #root{
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 100px 1fr;
     margin:10px;
     margin-bottom: 20px;
     width: 80%;
-    .form{
+    .main{
         display:flex;
-        flex-direction: column;
-        justify-content: center;
-        background:rgba(0,0,0,0.7);
-        padding:40px;
-        input{
-            margin-bottom: 20px;
-            height:40px;
-            outline: none;
-            border:none;
-            padding-left:5px
+        flex-direction: row;
+        justify-content: space-around;
+        .form{
+            flex-grow: 3;
+            font-family: Arial, Helvetica, sans-serif;
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            background:rgba(0,0,0,0.7);
+            padding:40px;
+            label{
+                color:white;
+            }
+            input{
+                margin-bottom: 20px;
+                height:40px;
+                outline: none;
+                border:none;
+                padding-left:5px
+            }
+            button{
+                box-shadow: 1px 2px 2px rgba(0,0,0,0.5);
+                color:$color;
+                padding: 6px;
+                border:none;
+                background:$color-background
+            }
         }
-        button{
-            box-shadow: 1px 2px 2px rgba(0,0,0,0.5);
+        h1{
             color:$color;
-            padding: 6px;
-            border:none;
-            background:$color-background
+            font-family: Arial, Helvetica, sans-serif
+        }
+        .body{
+            font-family: Arial, Helvetica, sans-serif;
+            color:$color;
+            font-size:13px;
+            line-height: 25px;
+            padding:10px;
+            width:50%;
+            @include mq('700px')
         }
     }
-    h1{
-        color:$color;
-        font-family: Arial, Helvetica, sans-serif
     }
-    .body{
-        font-family: Arial, Helvetica, sans-serif;
-        color:$color;
-        font-size:13px;
-    }
-}
 .header{
     color: $color;
     grid-column: span 2;
